# ockam

./: .gitignore  Cargo.toml  NOTICE  build.gradle  cliff.toml
.github/: dependabot.yml
.github/workflows/: all.yml  codeql.yml  commits.yml  create-release-pull-request.yml  documentation.yml  draft-binaries.yml  editorconfig.yml  elixir.yml  lint-cargo.yml  ockam-package.yml  ockam_command.yml  publish-crates.yml  release-binaries.yml  release-tag.yml  release.yml  rust.yml  scorecards.yml  semgrep.yml  shellcheck.yml  shfmt.yml
examples/rust/get_started/: Cargo.toml
examples/rust/ockam_kafka/: Cargo.toml
examples/rust/tcp_inlet_and_outlet/: Cargo.toml
implementations/elixir/ockam/ockam_vault_software/: mix.exs
implementations/rust/: build.gradle  cliff.toml  release.toml
implementations/rust/ockam/ockam/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_abac/: CHANGELOG.md
implementations/rust/ockam/ockam_api/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_channel/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_command/: CHANGELOG.md  Cargo.toml
tools/docker/builder/: Dockerfile
tools/docker/cloud-node/: Dockerfile
tools/docs/: check_documentation.sh  verify_md.sh
tools/docs/example_blocks/: Cargo.toml
tools/docs/example_runner/: Cargo.toml
tools/ockam-hub-cli/: Cargo.toml
tools/scripts/release/: README.md  changelog.sh  crate-bump.sh  crate-publish.sh  crate-publisher.sh  crates-to-publish.sh  delete_draft.sh  fetch-crates.sh  publish-order.sh  release.sh  tagging.sh
(+92 files in other folders)
